Fix overflow issue

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,6 +8,8 @@ body {
 .banner {
   width: 100%;
   height: 600px;
+  // clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%);
+  // z-index: -10;
 }
 
 
@@ -51,7 +53,6 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  z-index: 10;
   background-color: transparent;
   width: 100vw;
 
@@ -115,7 +116,6 @@ body {
   left: 0;
   right: 0;
   margin: auto;
-  z-index: 11;
   background-color: #f5d020;
   background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
   border-radius: 20px;
@@ -182,7 +182,6 @@ body {
   padding: 20px;
   backdrop-filter: blur(10px);
   top: 120px;
-  z-index: 11px;
   width: 50%;
   height: auto;
   left: 0;
@@ -221,8 +220,8 @@ body {
 }
 
 .product-list {
-  max-width: 100%;
-  margin: 20px 150px;
+  max-width: 100vw;
+  padding: 20px 10px;
   height: auto;
   margin-bottom: 40px;
 }
@@ -234,7 +233,7 @@ body {
   align-items: center;
   color: white;
   background-color: transparent;
-  padding: 0px 10px;
+  padding: 0px 90px;
 }
 
 .view-all-button-container{
@@ -254,6 +253,7 @@ body {
 .product-list-items{
   display: flex;
   flex-direction: row;
+  justify-content: center;
   gap:20px;
 }
 
